# XingyuBot

./: .env.example  .env.test.example  .gitignore  .gitmodules  .replit  Instance.py  LICENSE.md  README.md  bot_website.py  channel_settings.json  command.json  daysignin.json  di.py  dict.json  gamer_data.json  library.py  lottery.json  main.py  main_test.py  note.txt  poetry_pyproject.toml  point.json  pyproject.toml  pytest.ini  requirements.txt  result.json  run_main.bat  run_update.bat  sentry_bootstrap.py  setting.json  sign_day.json  sign_week.json  test.md  test.py  test2.py  test_main.py  test_main_chat.py  token_settings.json  twitch_chatbot.py  update.py  (+2 more)
BotLib/: basic.py  communitylib.py  database.py  errors.py  file_database.py  funtions.py  gamedata.py  gamelib.py  user.py  userlib.py  weatherlib.py
app/: bot_website.py  replit_keep_alive.py  twitch_chatbot.py  update.py  update_requirement.bat
bothelper/: __init__.py  basic.py  database.py  errors.py  file_database.py  funtions.py  utility.py
cmd_oragin/: help.py  music.py  weather.py
cmds/: 2st_guild.py  artificial_intelligence.py  bot_event.py  command.py  crass_chat.py  debug.py  economy_system.py  error.py  event.py  game.py  help.py  info.py  lol.py  main_guild.py  moderation.py  music.py  music_test2.py  ous.py  owner.py  page_system.py  point.py  point_system.py  random_squod.py  reaction.py  requests.py  role_playing_game.py  sign.py  slash.py  system_community.py  system_economy.py  system_game.py  system_user.py  task.py  test.py  user_set.py  user_system.py  weather.py
core/: classes.py  music.py
data/: dict.json  lol_dict.json
database/: channel_settings.json  command_name.json  command_option.json  dict.json  event.json  gamer_data.json  lol_champion.csv  lol_dict.json  lottery.json  mcp_config.json  picture.json  role_save.json  sign_day.json  sign_week.json
docs/: RUN_TESTS_README.md  TESTING_INDEX.md  material.md  testing-strategy.md
lib/: User.py
scripts/: run_main.bat  run_main.sh  run_main_remote.bat  run_update.bat  run_update.sh  update.py
slash_cmds/: slash.py
starDiscord/: __init__.py  bot.py  checks.py  command_options.py  extension.py  music_player.py
starServer/: auth.py  bot_website.py  scheduler.py  tunnel_threads.py  twitch_chatbot.py
starWebServer/: bot_website.py  tunnel_threads.py
starcord/: __init__.py  client.py  errors.py  funtions.py  json_maker.py  logger.py  settings.py  starAI.py  utility.py
starlib/: __init__.py  errors.py  exceptions.py  instance.py  json_maker.py  settings.py  starAI.py  starAgent.py  starAgent_line.py
starserver/: webdriver.py
test/: PageTest.py  conftest.py  jsonTest2.py  osu.py  page.py  requests.py  requestsTest1.py  test1.json  test3.py  test4 copy.py  test4.py  test5.py  test6.py  test_.py  test_agent.py  test_ai.py  test_community.py  test_json copy.py  test_json.py  test_json2.py  test_log.py  test_lol.py  test_lol2.py  test_lol_timeline.py  test_main.py  test_music.py  test_notion.py  test_oauth.py  test_ouspy.py  test_pyosu.py  test_sql.py  test_time.py  test_unit.py  test_web.py  test_yt.py
tests/: README.md  __init__.py  conftest.py
twitch_chatbot/: main.py  main_chat_test.py
unuse/: 2st_guild.py  bot.py  event.py  main_guild.py  music1.py  music2.py  osu2.py  ous.py  pyosu.py  reaction.py  task.py
unused/: pyosu.py
v2_starDiscord/: bot.py  checks.py  command_options.py  utils.py
v2_starWeb/: __init__.py  main.py  types.py
(+272 files in other folders)
