[tool.poetry]
name = "xingyubot"
version = "0.2.3"
description = "一個集結許多功能的DiscordBot"
authors = ["威立 <66502303+willy1236@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = {extras = ["voice"], version = "^2.5.0"}
requests = "^2.31.0"
feedparser = "^6.0.11"
pandas = "^2.2.1"
psutil = "^5.9.8"
beautifulsoup4 = "^4.12.3"
mysql-connector-python = "^8.3.0"
gitpython = "^3.1.43"
apscheduler = "^3.10.4"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
yt-dlp = "^2024.3.10"
matplotlib = "^3.8.4"
google-api-python-client = "^2.125.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
google-generativeai = "^0.5.0"
mcrcon = "^0.7.0"
twitchapi = "^4.2.0"
pymongo = "^4.6.3"
genshin = "^1.7.1"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
faker = "^24.9.0"
spotify-dl = "^8.9.0"
genshin = {extras = ["cookies", "rsa"], version = "^1.7.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
