[tool.poetry]
name = "xingyubot"
version = "0.2.10"
description = "一個集結許多功能的DiscordBot"
authors = ["威立 <66502303+willy1236@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
py-cord = {extras = ["voice"], version = "^2.5.0"}
requests = "^2.32.3"
feedparser = "^6.0.11"
pandas = "^2.2.3"
psutil = "^6.1.0"
beautifulsoup4 = "^4.12.3"
mysql-connector-python = "^9.0.0"
gitpython = "^3.1.43"
apscheduler = "^3.10.4"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
yt-dlp = "^2024.11.4"
matplotlib = "^3.9.2"
google-api-python-client = "^2.151.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
google-generativeai = "^0.8.3"
mcrcon = "^0.7.0"
twitchapi = "^4.3.1"
pymongo = "^4.10.1"
genshin = "^1.7.2"
sqlmodel = "^0.0.22"
line-bot-sdk = "3.13.0"
mcstatus = "^11.1.1"
vosk = "^0.3.45"
mwrogue = "^0.1.5"
psycopg2 = "^2.9.10"
tweepy = {extras = ["async"], version = "^4.15.0"}
pydantic-ai-slim = {extras = ["mcp", "vertexai"], version = "^0.2.10"}


[tool.poetry.group.dev.dependencies]
faker = "^24.9.0"
genshin = {extras = ["cookies", "rsa"], version = "^1.7.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
